# gemini-code-review

./: Dockerfile  Dockerfile.base  Makefile  README.md  action.yml  ai.py  app.py  bumpversion.sh  dryrun.sh  entrypoint.sh  gh.py  prompt.txt  pyproject.toml  requirements.txt  utils.py
.github/workflows/: ci.yaml  gemini_code_review.yaml  pull_requests.yaml  release.yaml  test.yaml
scripts/: bumpversion.sh  dryrun.sh
src/: ai.py  app.py  gh.py  pr_state.py  review_state.py  utils.py
