[tool.poetry]
name = "gemini-code-review"
version = "0.2.2"
description = "Ask Gemini to review your pull requests"
authors = ["ablil <ablil@proton.me>"]
readme = "README.md"
license = "Apache-2.0"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pygithub = "^2.5.0"
google-generativeai = "^0.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
